fix: correct CSS for better visibility for footer links on hover

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -145,3 +145,7 @@ html[data-theme='dark'] .button {
 html[data-theme='dark'] .footer {
   background-color: #2D333B;
 }
+
+.footer .footer__item a:hover {
+  color: #DEF0DE;
+}
